--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,9 @@
   "type": "module",
   "description": "",
   "dependencies": {
+    "@ai-sdk/google": "^1.1.25",
+    "@google/generative-ai": "^0.24.0",
+    "ai": "^4.1.61",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
